# aoc2021

./: .gitignore  CMakeLists.txt  README.md
day-01/: Makefile  main.cpp
day-02/: main.cpp
day-03/: main.cpp
day-04/: Makefile  main.cpp
day-05/: main.cpp
day-06/: main.cpp
day-07/: main.cpp
day-08/: main.cpp
day-09/: main.cpp
day-10/: main.cpp
day-11/: main.cpp
day-12/: main.cpp
day-13/: main.cpp
day-14/: main.cpp
day-15/: main.cpp
day-16/: main.cpp
day-17/: main.cpp
day-20/: main.cpp
day-25/: Makefile  main.cpp
