cmake_minimum_required(VERSION 3.14)
project(aoc_2021)

set(CMAKE_CXX_STANDARD 17)

set(Sources01 day-01/main.cpp)
add_executable(day-01 ${Sources01})

set(Sources02 day-02/main.cpp)
add_executable(day-02 ${Sources02})

set(Sources03 day-03/main.cpp)
add_executable(day-03 ${Sources03})

set(Sources04 day-04/main.cpp)
add_executable(day-04 ${Sources04})

set(Sources05 day-05/main.cpp)
add_executable(day-05 ${Sources05})

set(Sources06 day-06/main.cpp)
add_executable(day-06 ${Sources06})

set(Sources07 day-07/main.cpp)
add_executable(day-07 ${Sources07})