cmake_minimum_required(VERSION 3.14)
project(aoc_2021)

set(CMAKE_CXX_STANDARD 17)

set(Sources day-01/main.cpp)
add_executable(day-01 ${Sources})

set(Sources2 day-02/main.cpp)
add_executable(day-02 ${Sources2})

set(Sources3 day-03/main.cpp)
add_executable(day-03 ${Sources3})

set(Sources4 day-04/main.cpp)
add_executable(day-04 ${Sources4})

set(Sources5 day-05/main.cpp)
add_executable(day-05 ${Sources5})

set(Sources6 day-06/main.cpp)
add_executable(day-06 ${Sources6})

set(Sources7exit day-07/main.cpp)
add_executable(day-07 ${Sources6})

set(Sources8 day-08/main.cpp)
add_executable(day-08 ${Sources6})

set(Sources9 day-09/main.cpp)
add_executable(day-09 ${Sources9})

set(Sources10 day-10/main.cpp)
add_executable(day-10 ${Sources10})

set(Sources11 day-11/main.cpp)
add_executable(day-11 ${Sources11})

set(Sources12 day-12/main.cpp)
add_executable(day-12 ${Sources12})

set(Sources13 day-13/main.cpp)
add_executable(day-13 ${Sources13})

set(Sources14 day-14/main.cpp)
add_executable(day-14 ${Sources14})

set(Sources15 day-15/main.cpp)
add_executable(day-15 ${Sources15})

set(Sources16 day-16/main.cpp)
add_executable(day-16 ${Sources16})

set(Sources17 day-17/main.cpp)
add_executable(day-17 ${Sources17})

set(Sources18 day-18/main.cpp)
add_executable(day-18 ${Sources18})

set(Sources19 day-19/main.cpp)
add_executable(day-19 ${Sources19})

set(Sources20 day-20/main.cpp)
add_executable(day-20 ${Sources20})